@@ -1,6 +1,11 @@
 2008-03-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
 
 	* src/MMapArea.py
+	Add bounding box selection.
+
+2008-03-24 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
+
+	* src/MMapArea.py
 	More optimizations for issue 55. Partial redraw is done on editing and
 	selecting and off-screen clipping has been simplified.
 
